[UPD] #58749 a,b - Update amount in Invoice Overview & Add Invoice info to the print

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
@@ -141,6 +141,10 @@ input[type="text"] {
     width: 50px !important;
 }
 
+.inputw55 {
+    width: 55px !important;
+}
+
 .inputw100 {
     width: 100px !important;
 }
@@ -3075,6 +3079,8 @@ body.login {
 }
 
 /*** invoice ***/
+
+
 .case-invoice-container {
     font-size: 14px;
     color: #333333;
