[UPD] #59583 Invoice info (Invoiced/Not invoiced)

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Content/css/dhhelpdesk.css
@@ -2004,6 +2004,10 @@ td.td-bottom-multiselect .btn-group {
         visibility: hidden;
     }
 
+.tooltipType{
+    cursor: pointer;
+}
+
 .tooltip.in {
     opacity: 1;
     filter: alpha(opacity=1);
