--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CasePrint.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CasePrint.cshtml
@@ -141,7 +141,7 @@
                             invoiceRowData = curVal.RemoveHTMLTags().JsonToHtmlTable<InvoiceRowModel>("invoice-time-print-table");
                         }
                             <tr>                                
-                                <td style="word-wrap: break-word;line-height:10px;" class="@invoiceTime.LineType">
+                                <td style="word-wrap: break-word;line-height:10px;" class="">
                                     @if (invoiceTimeData != null)
                                     {
                                         <p> @invoiceTimeData </p>
