--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Invoices/Views/Overview/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Invoices/Views/Overview/Index.cshtml
@@ -87,16 +87,17 @@
 				cancelText: '@Translation.GetForJS("Avbryt")',
 				copyText: '@Translation.GetForJS("Kopiera")',
 				statusList: @Html.SerializeObject(new Dictionary<int, string>
-							{
-								{ (int)InvoiceStatus.Invoiced, InvoiceStatus.Invoiced.GetTranslation(true) },
-								{ (int)InvoiceStatus.NotInvoiced, InvoiceStatus.NotInvoiced.GetTranslation(true) }
-							}),
+                            {
+                                { (int)InvoiceStatus.Ready, InvoiceStatus.Ready.GetTranslation(true) },
+                                { (int)InvoiceStatus.Invoiced, InvoiceStatus.Invoiced.GetTranslation(true) },
+                                { (int)InvoiceStatus.NotInvoiced, InvoiceStatus.NotInvoiced.GetTranslation(true) }
+                            }),
 				getListUrl: "@Url.Action(MvcInvoicesUrlName.Overview.GetInvoicesOverviewList, MvcInvoicesUrlName.Overview.Controller)",
 				saveValuesUrl: "@Url.Action(MvcInvoicesUrlName.Overview.SaveInvoiceValues, MvcInvoicesUrlName.Overview.Controller)",
 				actionUrl: "@Url.Action(MvcInvoicesUrlName.Overview.InvoiceAction, MvcInvoicesUrlName.Overview.Controller)",
 			    exportUrl: "@Url.Action(MvcInvoicesUrlName.Overview.InvoiceExport, MvcInvoicesUrlName.Overview.Controller)",
-                showCaseInfoUrl: '@Url.Content("~/Cases/ShowCasePrintPreview/")',
-				minStep: @ViewBag.MinStep
+				minStep: @ViewBag.MinStep,
+                showCaseInfoUrl: '@Url.Content("~/Cases/ShowCasePrintPreview/")'
 			});
 		    window.pageObj = pageObj;
 		    
