--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/Index.cshtml
@@ -5,14 +5,18 @@
     var jsSerializer = new JavaScriptSerializer();
     var perPageText = Translation.GetForJS("Antal per sida");
     var perShowingText = Translation.GetForJS("Visar sida");
+
+    var caseRelationTypeParent = Translation.GetForJS("Det här ärendet är ett underärende, klicka för att gå till huvudärendet");
+    var caseRelationTypeChild = Translation.GetForJS("Det här ärendet är ett huvudärende, klicka för att se underärenden");
 }
 <script type="text/javascript">
     window.pageSettings = @Html.Raw(jsSerializer.Serialize(Model.PageSettings));
     window.pageSettings.perPageText = '@perPageText';
     window.pageSettings.perShowingText = '@perShowingText';
     window.pageSettings.curUserId = '@(SessionFacade.CurrentUser != null ? SessionFacade.CurrentUser.UserId.ToLower().Replace("\\","\\\\"): string.Empty)';
+    window.pageSettings.isParentText = '@caseRelationTypeParent';
+    window.pageSettings.isChildText = '@caseRelationTypeChild';
 </script>
-
 <div class="case-overview page">
     <div class="secnavs fixed">
         <div class="pull-left">
