[FIX] #59612 Customer Setting, Include customer in extended search

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/CustomerSettings/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/CustomerSettings/_Input.cshtml
@@ -461,6 +461,23 @@
                         </div>
                     </div>
                 </div>
+                <h4>@Translation.Get("Avancerad sökning", Enums.TranslationSource.TextTranslation)</h4>
+                <div class="container">
+                    <div class="row">
+                        <div class="span15">
+                            <table>
+                                <tr>
+                                    <td>
+                                        <input type="checkbox" name="setting.CustomerInExtendedSearch" @(Model.Setting.CustomerInExtendedSearch == 1 ? "checked=checked" : "") value="1" />
+                                        <input type="hidden" name="setting.CustomerInExtendedSearch" value="0" />
+                                        @Translation.GetCoreTextTranslation("Inkludera kund i Utökad sökning")
+                                    </td>
+                                </tr>
+
+                            </table>
+                        </div>
+                    </div>
+                </div>
 
                 <h4>@Translation.GetCoreTextTranslation("Ärende")</h4>
 
@@ -470,17 +487,8 @@
                     <div class="row">
                         <div class="span12">
                             <table id="customerOrder">
-                                @*Hide temporary this release - Stina*@
-                                @*<tr>
-                                    <td>
-                                        @Translation.GetCoreTextTranslation("Visa begränsat sök resultat")
-                                    </td>
-                                    <td>
-                                        <input type="checkbox" name="setting.CustomerInExtendedSearch" @(Model.Setting.CustomerInExtendedSearch == 1 ? "checked=checked" : "") value="1" />
-                                        <input type="hidden" name="setting.CustomerInExtendedSearch" value="0" />
-                                        @Translation.GetCoreTextTranslation("Inkludera kund i Utökad sökning")
-                                    </td>
-                                </tr>*@
+                                
+                            
                                 <tr>
                                     <td>
                                         @Translation.GetCoreTextTranslation("Anmälare")
