[ADD] #59539 Add case subject to Feedback - Comments

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Questionnaire/Feedback/FeedbackStatisticsGrid.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Questionnaire/Feedback/FeedbackStatisticsGrid.cshtml
@@ -70,6 +70,7 @@
                                     str.Append("</label>");
                                     str.Append("<label class='case-dropdown-div'>");
                                     str.Append(decimal.Round(optionNote.CaseId));
+                                    str.Append(" " + optionNote.CaseSubject);
                                     str.Append("</label><br/></div>");
                                     hiddenNote = hiddenNote + str;
                                 }
