[UPD]  #59584 Invoice Time show/hide according to Dep-OU settings

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/Department/Edit.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/Department/Edit.cshtml
@@ -34,7 +34,8 @@
 
                 },
                 submitHandler: function (form) {
-                form.submit();
+                    $("#InvoiceSelectedOUs option").attr("selected", "selected");
+                    form.submit();                    
                 }
             });
          });
