--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/Department/_Invoicing.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/Department/_Invoicing.cshtml
@@ -1,14 +1,17 @@
 ﻿@using DH.Helpdesk.Web.Infrastructure
+@using DH.Helpdesk.BusinessData.OldComponents
 @model DH.Helpdesk.Web.Areas.Admin.Models.DepartmentInputViewModel
 
 @if (Model != null)
 {
-    <h4>@Translation.GetCoreTextTranslation("Restriction")</h4>
+    <h4>@Translation.GetCoreTextTranslation("Restriktion")</h4>
     <div class="row">
         <div class="span12">
             <table class="tableform">
                 <tr>
-                    <td class="span3">@Translation.GetCoreTextTranslation("Debitering")</td>
+                    <td class="span3">
+                       @Translation.Get(GlobalEnums.TranslationCaseFields.OU_Id.ToString(), Enums.TranslationSource.CaseTranslation, Model.Customer.Id)
+                    </td>
                     <td class="span9">
                     <td>
                         <table>
